--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "tone",
-	"version": "14.8.0",
+	"name": "@hwoongkang/tone",
+	"version": "1.0.0",
 	"description": "A Web Audio framework for making interactive music in the browser.",
 	"main": "build/Tone.js",
 	"module": "build/esm/index.js",
@@ -13,7 +13,8 @@
 		"Tone"
 	],
 	"scripts": {
-		"build": "npm run increment && rm -rf build && npm run ts:build && npm run webpack:build",
+		"build": "rm -rf build && npm run ts:build && npm run webpack:build",
+		"build:tone": "npm run increment && rm -rf build && npm run ts:build && npm run webpack:build",
 		"codecov": "codecov",
 		"docs": "node scripts/generate_docs.js",
 		"docs:json": "cross-var typedoc --options \"./scripts/typedoc.json\" --json \"$npm_config_docs_json\"",
